--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -4,7 +4,12 @@
     #platui > #variables;
 
     [plat-control="home-vc"] {
-
+       * {
+           margin-left: 20px;
+       }
+       .style{
+           border-bottom: 1px solid black
+       }
     }
 }
 
