--- a/app/src/viewcontrols/singlepost/singlepost.vc.less
+++ b/app/src/viewcontrols/singlepost/singlepost.vc.less
@@ -4,6 +4,9 @@
     #platui > #variables;
 
     [plat-control="singlepost-vc"] {
+        *{
+            margin-left: 20px;
+        }
            
     }
 }
