--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -4,11 +4,10 @@
     #platui > #variables;
 
     [plat-control="home-vc"] {
-       * {
-           margin-left: 20px;
-       }
        .style{
-           border-bottom: 1px solid black
+           border-bottom: 1px solid black;
+           margin-left: 40px;
+           margin-right: 40px;
        }
     }
 }
