--- a/app/src/viewcontrols/singlepost/singlepost.vc.less
+++ b/app/src/viewcontrols/singlepost/singlepost.vc.less
@@ -4,8 +4,9 @@
     #platui > #variables;
 
     [plat-control="singlepost-vc"] {
-        *{
-            margin-left: 20px;
+        .post{
+            margin-left: 40px;
+            margin-right: 40px;
         }
            
     }
