--- a/app/src/viewcontrols/home/home.vc.less
+++ b/app/src/viewcontrols/home/home.vc.less
@@ -9,6 +9,21 @@
            margin-left: 40px;
            margin-right: 40px;
        }
+       #title {
+           display: inline;
+       }
+       #thumbnail {
+           float: left;
+           margin-right: 10px;
+       }
+       .div {
+           display: block;
+           margin-bottom: 30px;
+       }
+       .button {
+          float: right;
+       }
+   
     }
 }
 
